src/parser.output
Nonterminals useless in grammar

    struct_specifier


Terminals unused in grammar

    T_FLOAT


State 22 conflicts: 3 shift/reduce
State 30 conflicts: 19 shift/reduce, 7 reduce/reduce
State 35 conflicts: 3 shift/reduce
State 37 conflicts: 19 shift/reduce, 7 reduce/reduce
State 45 conflicts: 3 shift/reduce
State 60 conflicts: 3 shift/reduce, 27 reduce/reduce
State 66 conflicts: 2 shift/reduce
State 68 conflicts: 2 shift/reduce
State 70 conflicts: 3 shift/reduce, 27 reduce/reduce
State 154 conflicts: 14 shift/reduce
State 157 conflicts: 5 shift/reduce
State 158 conflicts: 14 shift/reduce
State 164 conflicts: 2 shift/reduce
State 195 conflicts: 1 shift/reduce
State 242 conflicts: 3 shift/reduce
State 269 conflicts: 1 shift/reduce
State 337 conflicts: 1 shift/reduce


Grammar

    0 $accept: StartTree $end

    1 StartTree: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declarator declaration_list compound_statement
    9                    | declarator compound_statement

   10 declaration_specifiers: storage_class_specifier
   11                       | storage_class_specifier declaration_specifiers
   12                       | type_specifier
   13                       | type_specifier declaration_specifiers
   14                       | type_qualifier
   15                       | type_qualifier declaration_specifiers

   16 declarator: pointer direct_declarator
   17           | direct_declarator

   18 direct_declarator: IDENTIFIER
   19                  | '(' declarator ')'
   20                  | direct_declarator '[' constant_expression ']'
   21                  | direct_declarator '[' ']'
   22                  | direct_declarator '(' parameter_type_list ')'
   23                  | direct_declarator '(' IDENTIFIER_list ')'
   24                  | direct_declarator '(' ')'

   25 compound_statement: '{' '}'
   26                   | '{' statement_list '}'
   27                   | '{' declaration_list '}'
   28                   | '{' declaration_list statement_list '}'

   29 type_specifier: VOID
   30               | CHAR
   31               | SHORT
   32               | INT
   33               | LONG
   34               | FLOAT
   35               | DOUBLE
   36               | SIGNED
   37               | UNSIGNED
   38               | struct_or_union_specifier
   39               | enum_specifier
   40               | type_name

   41 statement_list: statement
   42               | statement_list statement

   43 statement: labeled_statement
   44          | compound_statement
   45          | expression_statement
   46          | selection_statement
   47          | iteration_statement
   48          | jump_statement

   49 jump_statement: GOTO IDENTIFIER ';'
   50               | CONTINUE ';'
   51               | BREAK ';'
   52               | RETURN ';'
   53               | RETURN expression ';'

   54 expression: assignment_expression
   55           | expression ',' assignment_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression '?' expression ':' conditional_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression OR_OP logical_and_expression

   62 logical_and_expression: inclusive_or_expression
   63                       | logical_and_expression AND_OP inclusive_or_expression

   64 inclusive_or_expression: exclusive_or_expression
   65                        | inclusive_or_expression '|' exclusive_or_expression

   66 exclusive_or_expression: and_expression
   67                        | exclusive_or_expression '^' and_expression

   68 and_expression: equality_expression
   69               | and_expression '&' equality_expression

   70 equality_expression: relational_expression
   71                    | equality_expression EQ_OP relational_expression
   72                    | equality_expression NE_OP relational_expression

   73 relational_expression: shift_expression
   74                      | relational_expression '<' shift_expression
   75                      | relational_expression '>' shift_expression
   76                      | relational_expression LE_OP shift_expression
   77                      | relational_expression GE_OP shift_expression

   78 shift_expression: additive_expression
   79                 | shift_expression LEFT_OP additive_expression
   80                 | shift_expression RIGHT_OP additive_expression

   81 additive_expression: multiplicative_expression
   82                    | additive_expression '+' multiplicative_expression
   83                    | additive_expression '-' multiplicative_expression

   84 multiplicative_expression: cast_expression
   85                          | multiplicative_expression '*' cast_expression
   86                          | multiplicative_expression '/' cast_expression
   87                          | multiplicative_expression '%' cast_expression

   88 cast_expression: unary_expression
   89                | '(' type_name ')' cast_expression

   90 unary_expression: postfix_expression
   91                 | INC_OP unary_expression
   92                 | DEC_OP unary_expression
   93                 | unary_operator cast_expression
   94                 | SIZEOF unary_expression
   95                 | SIZEOF '(' type_name ')'

   96 postfix_expression: primary_expression
   97                   | postfix_expression '[' expression ']'
   98                   | postfix_expression '(' ')'
   99                   | postfix_expression '(' argument_expression_list ')'
  100                   | postfix_expression '.' IDENTIFIER
  101                   | postfix_expression PTR_OP IDENTIFIER
  102                   | postfix_expression INC_OP
  103                   | postfix_expression DEC_OP

  104 primary_expression: IDENTIFIER
  105                   | CONSTANT
  106                   | T_INT
  107                   | STRING_LITERAL
  108                   | '(' expression ')'

  109 parameter_type_list: parameter_list
  110                    | parameter_list ',' ELLIPSIS

  111 parameter_list: parameter_declaration
  112               | parameter_list ',' parameter_declaration

  113 parameter_declaration: declaration_specifiers declarator
  114                      | declaration_specifiers abstract_declarator
  115                      | declaration_specifiers

  116 declaration: declaration_specifiers ';'
  117            | declaration_specifiers init_declarator_list ';'

  118 argument_expression_list: assignment_expression
  119                         | argument_expression_list ',' assignment_expression

  120 unary_operator: '&'
  121               | '*'
  122               | '+'
  123               | '-'
  124               | '~'
  125               | '!'

  126 assignment_operator: '='
  127                    | MUL_ASSIGN
  128                    | DIV_ASSIGN
  129                    | MOD_ASSIGN
  130                    | ADD_ASSIGN
  131                    | SUB_ASSIGN
  132                    | LEFT_ASSIGN
  133                    | RIGHT_ASSIGN
  134                    | AND_ASSIGN
  135                    | XOR_ASSIGN
  136                    | OR_ASSIGN

  137 constant_expression: conditional_expression

  138 init_declarator_list: init_declarator
  139                     | init_declarator_list ',' init_declarator

  140 init_declarator: declarator
  141                | declarator '=' initializer

  142 storage_class_specifier: TYPEDEF
  143                        | EXTERN
  144                        | STATIC
  145                        | AUTO
  146                        | REGISTER

  147 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  148                          | struct_or_union '{' struct_declaration_list '}'
  149                          | struct_or_union IDENTIFIER

  150 struct_or_union: STRUCT
  151                | UNION

  152 struct_declaration_list: struct_declaration
  153                        | struct_declaration_list struct_declaration

  154 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  155 specifier_qualifier_list: type_specifier specifier_qualifier_list
  156                         | type_specifier
  157                         | type_qualifier specifier_qualifier_list
  158                         | type_qualifier

  159 struct_declarator_list: struct_declarator
  160                       | struct_declarator_list ',' struct_declarator

  161 struct_declarator: declarator
  162                  | ':' constant_expression
  163                  | declarator ':' constant_expression

  164 enum_specifier: ENUM '{' enumerator_list '}'
  165               | ENUM IDENTIFIER '{' enumerator_list '}'
  166               | ENUM IDENTIFIER

  167 enumerator_list: enumerator
  168                | enumerator_list ',' enumerator

  169 enumerator: IDENTIFIER
  170           | IDENTIFIER '=' constant_expression

  171 type_qualifier: CONST
  172               | VOLATILE

  173 pointer: '*'
  174        | '*' type_qualifier_list
  175        | '*' pointer
  176        | '*' type_qualifier_list pointer

  177 type_qualifier_list: type_qualifier
  178                    | type_qualifier_list type_qualifier

  179 IDENTIFIER_list: IDENTIFIER
  180                | IDENTIFIER_list ',' IDENTIFIER

  181 type_name: specifier_qualifier_list
  182          | specifier_qualifier_list abstract_declarator

  183 abstract_declarator: pointer
  184                    | direct_abstract_declarator
  185                    | pointer direct_abstract_declarator

  186 direct_abstract_declarator: '(' abstract_declarator ')'
  187                           | '[' ']'
  188                           | '[' constant_expression ']'
  189                           | direct_abstract_declarator '[' ']'
  190                           | direct_abstract_declarator '[' constant_expression ']'
  191                           | '(' ')'
  192                           | '(' parameter_type_list ')'
  193                           | direct_abstract_declarator '(' ')'
  194                           | direct_abstract_declarator '(' parameter_type_list ')'

  195 initializer: assignment_expression
  196            | '{' initializer_list '}'
  197            | '{' initializer_list ',' '}'

  198 initializer_list: initializer
  199                 | initializer_list ',' initializer

  200 labeled_statement: IDENTIFIER ':' statement
  201                  | CASE constant_expression ':' statement
  202                  | DEFAULT ':' statement

  203 declaration_list: declaration
  204                 | declaration_list declaration

  205 expression_statement: ';'
  206                     | expression ';'

  207 selection_statement: IF '(' expression ')' statement
  208                    | IF '(' expression ')' statement ELSE statement
  209                    | SWITCH '(' expression ')' statement

  210 iteration_statement: WHILE '(' expression ')' statement
  211                    | DO statement WHILE '(' expression ')' ';'
  212                    | FOR '(' expression_statement expression_statement ')' statement
  213                    | FOR '(' expression_statement expression_statement expression ')' statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 125
    '%' (37) 87
    '&' (38) 69 120
    '(' (40) 19 22 23 24 89 95 98 99 108 186 191 192 193 194 207 208 209 210 211 212 213
    ')' (41) 19 22 23 24 89 95 98 99 108 186 191 192 193 194 207 208 209 210 211 212 213
    '*' (42) 85 121 173 174 175 176
    '+' (43) 82 122
    ',' (44) 55 110 112 119 139 160 168 180 197 199
    '-' (45) 83 123
    '.' (46) 100
    '/' (47) 86
    ':' (58) 59 162 163 200 201 202
    ';' (59) 49 50 51 52 53 116 117 154 205 206 211
    '<' (60) 74
    '=' (61) 126 141 170
    '>' (62) 75
    '?' (63) 59
    '[' (91) 20 21 97 187 188 189 190
    ']' (93) 20 21 97 187 188 189 190
    '^' (94) 67
    '{' (123) 25 26 27 28 147 148 164 165 196 197
    '|' (124) 65
    '}' (125) 25 26 27 28 147 148 164 165 196 197
    '~' (126) 124
    error (256)
    T_INT <int_num> (258) 106
    T_FLOAT (259)
    IDENTIFIER <string> (260) 18 49 100 101 104 147 149 165 166 169 170 179 180 200
    CONSTANT (261) 105
    STRING_LITERAL (262) 107
    SIZEOF (263) 94 95
    PTR_OP (264) 101
    INC_OP (265) 91 102
    DEC_OP (266) 92 103
    LEFT_OP (267) 79
    RIGHT_OP (268) 80
    LE_OP (269) 76
    GE_OP (270) 77
    EQ_OP (271) 71
    NE_OP (272) 72
    AND_OP (273) 63
    OR_OP (274) 61
    MUL_ASSIGN (275) 127
    DIV_ASSIGN (276) 128
    MOD_ASSIGN (277) 129
    ADD_ASSIGN (278) 130
    SUB_ASSIGN (279) 131
    LEFT_ASSIGN (280) 132
    RIGHT_ASSIGN (281) 133
    AND_ASSIGN (282) 134
    XOR_ASSIGN (283) 135
    OR_ASSIGN (284) 136
    TYPEDEF (285) 142
    EXTERN (286) 143
    STATIC (287) 144
    AUTO (288) 145
    REGISTER (289) 146
    CHAR (290) 30
    SHORT (291) 31
    INT (292) 32
    LONG (293) 33
    SIGNED (294) 36
    UNSIGNED (295) 37
    FLOAT (296) 34
    DOUBLE (297) 35
    CONST (298) 171
    VOLATILE (299) 172
    VOID (300) 29
    STRUCT (301) 150
    UNION (302) 151
    ENUM (303) 164 165 166
    ELLIPSIS (304) 110
    CASE (305) 201
    DEFAULT (306) 202
    IF (307) 207 208
    ELSE (308) 208
    SWITCH (309) 209
    WHILE (310) 210 211
    DO (311) 211
    FOR (312) 212 213
    GOTO (313) 49
    CONTINUE (314) 50
    BREAK (315) 51
    RETURN (316) 52 53


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    StartTree (87)
        on left: 1
        on right: 0
    translation_unit <base> (88)
        on left: 2 3
        on right: 1 3
    external_declaration <base> (89)
        on left: 4 5
        on right: 2 3
    function_definition <base> (90)
        on left: 6 7 8 9
        on right: 4
    declaration_specifiers <base> (91)
        on left: 10 11 12 13 14 15
        on right: 6 7 11 13 15 113 114 115 116 117
    declarator <base> (92)
        on left: 16 17
        on right: 6 7 8 9 19 113 140 141 161 163
    direct_declarator <base> (93)
        on left: 18 19 20 21 22 23 24
        on right: 16 17 20 21 22 23 24
    compound_statement <base> (94)
        on left: 25 26 27 28
        on right: 6 7 8 9 44
    type_specifier <base> (95)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 12 13 155 156
    statement_list <base> (96)
        on left: 41 42
        on right: 26 28 42
    statement <base> (97)
        on left: 43 44 45 46 47 48
        on right: 41 42 200 201 202 207 208 209 210 211 212 213
    jump_statement <base> (98)
        on left: 49 50 51 52 53
        on right: 48
    expression <base> (99)
        on left: 54 55
        on right: 53 55 59 97 108 206 207 208 209 210 211 213
    assignment_expression <base> (100)
        on left: 56 57
        on right: 54 55 57 118 119 195
    conditional_expression <base> (101)
        on left: 58 59
        on right: 56 59 137
    logical_or_expression <base> (102)
        on left: 60 61
        on right: 58 59 61
    logical_and_expression <base> (103)
        on left: 62 63
        on right: 60 61 63
    inclusive_or_expression <base> (104)
        on left: 64 65
        on right: 62 63 65
    exclusive_or_expression <base> (105)
        on left: 66 67
        on right: 64 65 67
    and_expression <base> (106)
        on left: 68 69
        on right: 66 67 69
    equality_expression <base> (107)
        on left: 70 71 72
        on right: 68 69 71 72
    relational_expression <base> (108)
        on left: 73 74 75 76 77
        on right: 70 71 72 74 75 76 77
    shift_expression <base> (109)
        on left: 78 79 80
        on right: 73 74 75 76 77 79 80
    additive_expression <base> (110)
        on left: 81 82 83
        on right: 78 79 80 82 83
    multiplicative_expression <base> (111)
        on left: 84 85 86 87
        on right: 81 82 83 85 86 87
    cast_expression <base> (112)
        on left: 88 89
        on right: 84 85 86 87 89 93
    unary_expression <base> (113)
        on left: 90 91 92 93 94 95
        on right: 57 88 91 92 94
    postfix_expression <base> (114)
        on left: 96 97 98 99 100 101 102 103
        on right: 90 97 98 99 100 101 102 103
    primary_expression <base> (115)
        on left: 104 105 106 107 108
        on right: 96
    parameter_type_list (116)
        on left: 109 110
        on right: 22 192 194
    parameter_list <base> (117)
        on left: 111 112
        on right: 109 110 112
    parameter_declaration <base> (118)
        on left: 113 114 115
        on right: 111 112
    declaration <base> (119)
        on left: 116 117
        on right: 5 203 204
    argument_expression_list <base> (120)
        on left: 118 119
        on right: 99 119
    unary_operator (121)
        on left: 120 121 122 123 124 125
        on right: 93
    assignment_operator (122)
        on left: 126 127 128 129 130 131 132 133 134 135 136
        on right: 57
    constant_expression <base> (123)
        on left: 137
        on right: 20 162 163 170 188 190 201
    init_declarator_list (124)
        on left: 138 139
        on right: 117 139
    init_declarator <base> (125)
        on left: 140 141
        on right: 138 139
    storage_class_specifier (126)
        on left: 142 143 144 145 146
        on right: 10 11
    struct_or_union_specifier (127)
        on left: 147 148 149
        on right: 38
    struct_or_union (128)
        on left: 150 151
        on right: 147 148 149
    struct_declaration_list <base> (129)
        on left: 152 153
        on right: 147 148 153
    struct_declaration <base> (130)
        on left: 154
        on right: 152 153
    specifier_qualifier_list <base> (131)
        on left: 155 156 157 158
        on right: 154 155 157 181 182
    struct_declarator_list <base> (132)
        on left: 159 160
        on right: 154 160
    struct_declarator <base> (133)
        on left: 161 162 163
        on right: 159 160
    enum_specifier <base> (134)
        on left: 164 165 166
        on right: 39
    enumerator_list <base> (135)
        on left: 167 168
        on right: 164 165 168
    enumerator <base> (136)
        on left: 169 170
        on right: 167 168
    type_qualifier (137)
        on left: 171 172
        on right: 14 15 157 158 177 178
    pointer <base> (138)
        on left: 173 174 175 176
        on right: 16 175 176 183 185
    type_qualifier_list (139)
        on left: 177 178
        on right: 174 176 178
    IDENTIFIER_list <base> (140)
        on left: 179 180
        on right: 23 180
    type_name <base> (141)
        on left: 181 182
        on right: 40 89 95
    abstract_declarator <base> (142)
        on left: 183 184 185
        on right: 114 182 186
    direct_abstract_declarator <base> (143)
        on left: 186 187 188 189 190 191 192 193 194
        on right: 184 185 189 190 193 194
    initializer <base> (144)
        on left: 195 196 197
        on right: 141 198 199
    initializer_list <base> (145)
        on left: 198 199
        on right: 196 197 199
    labeled_statement <base> (146)
        on left: 200 201 202
        on right: 43
    declaration_list <base> (147)
        on left: 203 204
        on right: 6 8 27 28 204
    expression_statement <base> (148)
        on left: 205 206
        on right: 45 212 213
    selection_statement <base> (149)
        on left: 207 208 209
        on right: 46
    iteration_statement <base> (150)
        on left: 210 211 212 213
        on right: 47


State 0

    0 $accept: . StartTree $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    ENUM        shift, and go to state 20
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    StartTree                  go to state 23
    translation_unit           go to state 24
    external_declaration       go to state 25
    function_definition        go to state 26
    declaration_specifiers     go to state 27
    declarator                 go to state 28
    direct_declarator          go to state 29
    type_specifier             go to state 30
    declaration                go to state 31
    storage_class_specifier    go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    specifier_qualifier_list   go to state 35
    enum_specifier             go to state 36
    type_qualifier             go to state 37
    pointer                    go to state 38
    type_name                  go to state 39


State 1

   18 direct_declarator: IDENTIFIER .

    $default  reduce using rule 18 (direct_declarator)


State 2

  142 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 142 (storage_class_specifier)


State 3

  143 storage_class_specifier: EXTERN .

    $default  reduce using rule 143 (storage_class_specifier)


State 4

  144 storage_class_specifier: STATIC .

    $default  reduce using rule 144 (storage_class_specifier)


State 5

  145 storage_class_specifier: AUTO .

    $default  reduce using rule 145 (storage_class_specifier)


State 6

  146 storage_class_specifier: REGISTER .

    $default  reduce using rule 146 (storage_class_specifier)


State 7

   30 type_specifier: CHAR .

    $default  reduce using rule 30 (type_specifier)


State 8

   31 type_specifier: SHORT .

    $default  reduce using rule 31 (type_specifier)


State 9

   32 type_specifier: INT .

    $default  reduce using rule 32 (type_specifier)


State 10

   33 type_specifier: LONG .

    $default  reduce using rule 33 (type_specifier)


State 11

   36 type_specifier: SIGNED .

    $default  reduce using rule 36 (type_specifier)


State 12

   37 type_specifier: UNSIGNED .
